--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "com.deltafield.meshhologram",
     "displayName": "MeshHologram",
-    "version": "0.1.5",
+    "version": "0.2.0-exp.1",
     "unity": "2022.3",
     "description": "Advanced Wireframe Shader",
     "keywords": ["shader", "material", "hlsl", "vr", "xr"],
@@ -11,9 +11,9 @@
     "license": "MIT",
     "licenseUrl": "https://github.com/r-delta-c/MeshHologram/blob/main/LICENSE.md",
     "dependencies": {
-        "com.deltafield.shader_commons":"1.0.0"
+        "com.deltafield.shader_commons":"1.1.0"
     },
     "vpmDependencies":{
-        "com.deltafield.shader_commons":"1.0.0"
+        "com.deltafield.shader_commons":"1.1.0"
     }
 }
